Bug 1469691 - Fix intermittent launch failure caused by registering a Mach port too late. r=erahm a=lizzard